# savio

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/: Info.plist  savio.desktop
src/: app.rs  main.rs  model.rs  theme.rs
src/engine/: binaries.rs  metadata.rs  mod.rs  setup.rs  sha256.rs  ytdlp.rs
src/engine/metadata/: tests.rs
