[package]
name = "savio"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "0.35"
rfd = "0.17"
serde_json = "1"
# HTTPS средствами стандартной библиотеки не решается, а докачивать yt-dlp и
# ffmpeg при первом запуске надо по HTTPS — отсюда единственная новая зависимость.
# `default-features = false` здесь обязателен: фича `gzip` включена по умолчанию
# и заставляет `Body::content_length()` возвращать `None` на сжатом ответе.
# Прогресс-бар молча выродился бы в неопределённый индикатор, а прочитать размер
# из заголовка вручную нельзя — там размер сжатых данных, бар перескочил бы 100%.
ureq = { version = "3", default-features = false, features = ["rustls"] }
